--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@
 
 body {
   background-image: url(header\ calculadora.jpg);
-  opacity: 80%;
+  opacity: 90%;
   background-position: top center;
-  background-size: 100% 100%;
+  background-size: 100vw, 100vh;
   background-repeat: no-repeat;
   background-color: #121214;
 }
@@ -16,31 +16,27 @@ body {
 #titulo h1 {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-style: bold;
-  padding: 50px;
-  margin: 25px;
-  height: 10vh;
   font-size: 5em;
-  text-align: center;
   color: rgb(0, 0, 0);
-  box-shadow: 3px 3px 10px rgba(11, 11, 11, 0.377);
 }
 
 section h1 {
   font-family: 'Courier New', Courier, monospace;
-  padding: 20px;
+  padding: 10px;
   font-size: 2rem;
   text-align: center;
 }
 
 section {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  background-image: linear-gradient(90deg, #d8d2e9 0%, #8e9df0 50.52%, #27509c 100%);
+  background-image: linear-gradient(90deg, #657af1 0%, #425df3 50.52%, #27509c 100%);
   border-radius: 15px;
-  padding: 15px;
+  padding: 10px;
   width: 60vw;
   margin: auto;
   box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.377);
-  margin-bottom: 10vh;
+  margin-bottom: 10px;
+  margin-top: 30px;
 }
 
 section div {
@@ -61,14 +57,17 @@ input {
 }
 
 button {
+  font-style: bold;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 20px;
+  padding: 15px;
+  font-style: bold;
   background-color: #eff6ef;
   border: none;
   color: rgb(6, 5, 5);
-  padding: 16px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
   margin: 4px 2px;
   transition-duration: 0.4s;
   cursor: pointer;
@@ -78,4 +77,21 @@ button {
 button:hover {
   background-color: #4CAF50;
   color: white;
+}
+
+
+.potentiation {
+  display: none
+}
+
+.cube {
+  display: none
+}
+
+.fracionado {
+  display: none
+}
+
+.circle {
+  display: none
 }
